Got the demo working, changed api calls to resolve json, updated readme, updated backendresources instructions, removed verify step and all views, cleaned up code

--- a/section-3/basic-website-aws/backend/package.json
+++ b/section-3/basic-website-aws/backend/package.json
@@ -12,5 +12,8 @@
   "license": "ISC",
   "devDependencies": {
     "cross-env": "^5.2.0"
+  },
+  "dependencies": {
+    "aws-sdk": "^2.286.2"
   }
 }
