Updated backend resources instructions, added bathers update field, added update picture field, added set bathers lambda function

--- a/section-3/basic-website-aws/frontend/package.json
+++ b/section-3/basic-website-aws/frontend/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.5.3",
     "aws-amplify": "^0.4.1",
     "aws-amplify-react": "^0.1.47",
+    "aws-sdk": "^2.296.0",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
