--- a/section-3/basic-website-aws/backend/template.yaml
+++ b/section-3/basic-website-aws/backend/template.yaml
@@ -11,6 +11,33 @@ Resources:
       Description: Auto confirms the users signup on Cognito
       MemorySize: 256
       Timeout: 30
+  
+  SetBathersPreference:
+    Type: AWS::Serverless::Function
+    Properties:
+      Runtime: nodejs8.10
+      Handler: set-user-bathers-preference.handler
+      CodeUri: ./src
+      Description: Retreives the users bathers preference
+      MemorySize: 256
+      Timeout: 30
+      Policies:
+        - AWSLambdaExecute # Managed Policy
+        - Version: '2012-10-17' # Policy Document
+          Statement:
+            - Effect: Allow
+              Action:
+                - dynamodb:PutItem
+              Resource: 
+                !Join
+                  - ':'
+                  - - 'arn:aws:dynamodb'
+                    - !Ref 'AWS::Region'
+                    - !Ref 'AWS::AccountId'
+                    - 'table/my-pool-party-users-bathers*'
+      Environment:
+        Variables:
+          PoolPartyTable: my-pool-party-users-bathers
 
   BathersPreference:
     Type: AWS::Serverless::Function
