--- a/projects/1 - Authentication with Auth0/solution/part-2/auth0-app-frontend/package.json
+++ b/projects/1 - Authentication with Auth0/solution/part-2/auth0-app-frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "auth0-lock": "^11.12.1",
+    "axios": "^0.18.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1"
