Complete part 2 code for project 1, added authorizer.js to project 1

--- a/projects/1 - Authentication with Auth0/solution/part-2/auth0-app-backend/serverless.yml
+++ b/projects/1 - Authentication with Auth0/solution/part-2/auth0-app-backend/serverless.yml
@@ -14,3 +14,10 @@ functions:
           path: hello
           method: get
           cors: true
+  
+  authorizer:
+    handler: src/authorizer/handler.handler
+    environment:
+      AUTH0_DOMAIN: csct.au.auth0.com
+
+  
