--- a/section-5/basic-website-azure/frontend/src/config.example.json
+++ b/section-5/basic-website-azure/frontend/src/config.example.json
@@ -1,7 +1,6 @@
 {
     "tenantName": "",
-    "signInPolicyName": "B2C_1_signin",
-    "signUpPolicyName": "B2C_1_signup",
+    "policyName": "B2C_1_signupandin",
     "backendClientID": "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx",
     "backendClientScopeName": "user_impersonation",
     "backendClientApiID": "api",
