--- a/projects/3 - ETL and Data Analysis/serverless.yml
+++ b/projects/3 - ETL and Data Analysis/serverless.yml
@@ -11,10 +11,17 @@ provider:
         - "s3:GetObject"
       Resource:
         - "arn:aws:s3:::gdelt-open-data/*"
+    - Effect: "Allow"
+      Action:
+        - "firehose:PutRecord"
+      Resource: ""
+  environment:
+    DATALYZER_INGEST_STREAM_NAME: datalyzer_ingest
 
 functions:
   ingestGdeltData:
     handler: handler.ingestGdeltData
+    timeout: 60
     events:
       - sns:
           arn: arn:aws:sns:us-east-1:928094251383:gdelt-csv
